@@ -1,3 +1,9 @@
+2011-03-03  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* netkey.c: new file (from Ryan Thomas <ryan@coraid.com>).
+	* ftpclass.cc, ftpclass.h, resource.cc: add netkey support;
+	  (ftp:netkey-allow) new setting (original patch from Ryan Thomas).
+
 2011-02-24  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* pgetJob.cc: check for chunk[0] error, avoids a segfault.
